--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,13 @@ body{
   width: 60vw;
   height: auto;
   background-color: white;
-  border-bottom: 4px solid rgb(42, 36, 65);
+  border-bottom: 4px solid rgb(114, 30, 100);
   box-shadow: 2px 2px 3px 3px #9397a7;;
 
 }
 
 .task-name{
-  background-color: rgb(42, 36, 65);
+  background-color: rgb(114, 30, 100);
   color: rgb(199, 198, 214);
   display: flex;
   justify-content: center;
@@ -34,19 +34,23 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(93, 88, 112);
   min-width: 15%;
   height: 30px;
   border: 1px solid rgb(83, 83, 97);
   border-radius: 4px;
+  box-shadow: 2px 2px 6px 2px rgb(33, 13, 51);
 }
 
 button {
   align-items: center; 
-  min-width: 80px;
+  min-width: 60px;
   font-size: 1rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: rgb(176, 173, 189);
+  border-radius: 4px;
+}
+
+button:hover{
+  background-color: rgba(97, 71, 84, 0.692);
 }
 
 .form-container{
@@ -57,7 +61,7 @@ button {
   flex-direction: column;
   justify-items: center;
   align-items: center;
-  border-bottom: 4px solid rgb(42, 36, 65);
+  border-bottom: 4px solid rgb(114, 30, 100);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   font-size: 1.2rem;
@@ -155,7 +159,7 @@ input{
   border-bottom: 2px solid rgb(42, 36, 65);
 }
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:700px){
   .task-container{
     min-width: 300px;
   }
